--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<h1>Bonjour bienvenue sur l'application TP02</h1>
+<h1>Bienvenue sur l'application TP03</h1>
 <app-header></app-header>
 
-<app-formulaire></app-formulaire>
+<!-- <app-formulaire></app-formulaire> -->
+<app-moteur-de-recherche></app-moteur-de-recherche>
+<app-catalogue></app-catalogue>
 
 <app-footer></app-footer>
